--- a/packages/admin/public/index.html
+++ b/packages/admin/public/index.html
@@ -8,9 +8,9 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link href="/fonts.css" rel="stylesheet" type="text/css"/>
+    <link rel="manifest" href="/admin/manifest.json">
+    <link rel="shortcut icon" href="/admin/favicon.ico">
+    <link href="/admin/fonts.css" rel="stylesheet" type="text/css"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
