--- a/packages/admin/src/index.html
+++ b/packages/admin/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport">
     <title>Main App</title>
   </head>
-  <body>
+  <body style="margin: 0px">
     <div id="root"></div>
   </body>
 </html>
